# nix-reproducible-example

./: default.nix  stack.yaml
hello-world/: LICENSE  hello-world.cabal
nix/: docker.nix  stackyaml.nix
